add comment on stationarity

--- a/Data_stationarity.ipynb
+++ b/Data_stationarity.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "96373caf",
+   "id": "f8d9c311",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d51f7d7e",
+   "id": "7a375a68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,17 +26,20 @@
     "from statsmodels.tsa.stattools import adfuller\n",
     "\n",
     "def stationarity(timeseries):\n",
+    "    #1) Seasonality \n",
     "    for _ in range(5): #maximum differencing 5 times\n",
     "        try:\n",
     "            exception = 0\n",
     "            result = adfuller(timeseries)\n",
     "        except:\n",
-    "            exception = 1\n",
+    "            exception = 1 # when input closing price data is the same, error occurs -> break\n",
     "            break\n",
-    "        if result[1] < 0.05:\n",
+    "        if result[1] < 0.05: # pvalue < 0.05\n",
     "            break\n",
+    "        # differencing\n",
     "        timeseries = timeseries.diff().dropna() #timeseries.diff() = timeseries - timeseries.shift()     \n",
-    "\n",
+    "    \n",
+    "    #2) Trend\n",
     "    if exception < 1:\n",
     "        if result[1] > 0.05: #If Still not stationary, apply log transformation\n",
     "            timeseries = timeseries.apply(np.log)\n",
@@ -47,7 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d1dc0c07",
+   "id": "b3fa4b9e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ca3af8f9",
+   "id": "93c6d6cd",
    "metadata": {},
    "outputs": [
     {
@@ -76,7 +79,7 @@
     "unique_codes = train['종목코드'].unique()\n",
     "\n",
     "# 각 종목코드에 대해서 모델 학습 및 추론 반복\n",
-    "for code in tqdm(unique_codes[0:10]):\n",
+    "for code in tqdm(unique_codes):\n",
     "    \n",
     "    logtrans = 0\n",
     "    # 학습 데이터 생성\n",
@@ -103,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b87f3c16",
+   "id": "a7664e54",
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +227,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6a0a60f",
+   "id": "57e20bf8",
    "metadata": {},
    "outputs": [],
    "source": []
