--- a/Data_stationarity.ipynb
+++ b/Data_stationarity.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "id": "f8d9c311",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "7a375a68",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "b3fa4b9e",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "93c6d6cd",
    "metadata": {},
    "outputs": [
@@ -67,7 +67,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|███████████████████████████████████████████| 10/10 [00:02<00:00,  3.52it/s]\n"
+      "100%|█████████████████████████████████████████████| 9/9 [00:02<00:00,  3.58it/s]\n"
      ]
     }
    ],
@@ -86,6 +86,7 @@
     "    train_close = train[train['종목코드'] == code][['일자', '종가']]\n",
     "    train_close['일자'] = pd.to_datetime(train_close['일자'], format='%Y%m%d')\n",
     "    train_close['종가'] = stationarity(train_close['종가'])\n",
+    "    train_close = train_close.dropna()\n",
     "    train_close.set_index('일자', inplace=True)\n",
     "    tc = train_close['종가']\n",
     "    \n",
@@ -105,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "id": "a7664e54",
    "metadata": {},
    "outputs": [
@@ -138,14 +139,8 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>A060310</td>\n",
-       "      <td>-0.634147</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
        "      <td>A095570</td>\n",
-       "      <td>1.076930</td>\n",
+       "      <td>0.995071</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -157,43 +152,43 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>A054620</td>\n",
-       "      <td>-0.459270</td>\n",
+       "      <td>-0.520385</td>\n",
        "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>A265520</td>\n",
-       "      <td>-0.004132</td>\n",
+       "      <td>-0.011246</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>A211270</td>\n",
-       "      <td>-0.405870</td>\n",
+       "      <td>-0.404806</td>\n",
        "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>A027410</td>\n",
-       "      <td>-0.121139</td>\n",
+       "      <td>-0.121174</td>\n",
        "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>A282330</td>\n",
-       "      <td>-0.843253</td>\n",
-       "      <td>9</td>\n",
+       "      <td>-0.844589</td>\n",
+       "      <td>8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>A126600</td>\n",
-       "      <td>-0.908344</td>\n",
-       "      <td>10</td>\n",
+       "      <td>-0.908411</td>\n",
+       "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>A138930</td>\n",
-       "      <td>0.528496</td>\n",
+       "      <td>0.523701</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -202,19 +197,18 @@
       ],
       "text/plain": [
        "      종목코드  final_return  순위\n",
-       "0  A060310     -0.634147   8\n",
-       "0  A095570      1.076930   1\n",
+       "0  A095570      0.995071   1\n",
        "0  A006840      0.003040   3\n",
-       "0  A054620     -0.459270   7\n",
-       "0  A265520     -0.004132   4\n",
-       "0  A211270     -0.405870   6\n",
-       "0  A027410     -0.121139   5\n",
-       "0  A282330     -0.843253   9\n",
-       "0  A126600     -0.908344  10\n",
-       "0  A138930      0.528496   2"
+       "0  A054620     -0.520385   7\n",
+       "0  A265520     -0.011246   4\n",
+       "0  A211270     -0.404806   6\n",
+       "0  A027410     -0.121174   5\n",
+       "0  A282330     -0.844589   8\n",
+       "0  A126600     -0.908411   9\n",
+       "0  A138930      0.523701   2"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
