--- a/final.ipynb
+++ b/final.ipynb
@@ -2304,7 +2304,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "submission = results_df.drop('final_return',axis=1)"
+    "data.to_csv(\"ensemble.csv\")\n",
+    "data_lstm.to_csv(\"lstm.csv\")\n",
+    "data_xgb.to_csv(\"xgb.csv\")"
    ]
   },
   {
@@ -2313,7 +2315,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "submission.to_csv(\"submission_stationarity_autoarima.csv\")"
+    "submission = data.drop('final_return',axis=1)\n",
+    "submission_lstm = data_lstm.drop('final_return',axis=1)\n",
+    "submission_xgb = data_xgb.drop('final_return',axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "submission.to_csv(\"submission_stationarity_autoarima.csv\")\n",
+    "submission_lstm.to_csv(\"submission_lstm.csv\")\n",
+    "submission_xgb.to_csv(\"submission_xgb.csv\")"
    ]
   }
  ],
